# claudioAI

./: .env.dev  .env.example  Dockerfile  README.md  README.pt.md  pyproject.toml
api/: config.py  main.py  server.py
api/data/gateways/: azure_vector_gateway.py  openai_llm_gateway.py
api/data/models/: azure_vector_filter.py
api/domain/entities/: completion_message.py  completion_response.py  completion_role.py  create_completion.py  llm_message.py  llm_message_role.py  vector_search_result.py
api/domain/gateways/: llm_gateway.py  vector_gateway.py
api/domain/services/: conversation_service.py
api/infrastructure/: logger.py
api/routes/: __init__.py  conversations.py
tests/: test_conversation_service_.py
